Created page with "Voir [[TechDraw_FaceCenterLine/fr#Remarques|TechDraw Ligne centrale à une face]]."

--- a/wiki/fr/TechDraw_2LineCenterLine.html
+++ b/wiki/fr/TechDraw_2LineCenterLine.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw 2LineCenterLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+2LineCenterLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw 2LinienMittellinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_2LineCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2LineCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea centrale tra 2 linee (80% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj o&#347; pomi&#281;dzy dwiema liniami (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1086;&#1089;&#1077;&#1074;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1084;&#1077;&#1078;&#1076;&#1091; 2 &#1083;&#1080;&#1085;&#1080;&#1103;&#1084;&#1080;" (27% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -60,15 +60,13 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez deux ar&ecirc;tes dans une vue. Les ar&ecirc;tes doivent &ecirc;tre plus ou moins parall&egrave;les.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter une ligne centrale entre 2 lignes</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter une ligne centrale entre 2 lignes</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ligne centrale entre 2 lignes</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ligne centrale entre 2 lignes</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre. Voir <a href="../fr/TechDraw_FaceCenterLine.html#Options" title="TechDraw FaceCenterLine/fr">TechDraw Ligne centrale &agrave; une face</a> pour plus d'informations.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> pour confirmer.</li>
 <li>Une ligne centrale est ajout&eacute;e entre les ar&ecirc;tes s&eacute;lectionn&eacute;es.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id=".C3.89dition"></span><span class="mw-headline" id="&Eacute;dition">&Eacute;dition</span></h2>
@@ -76,7 +74,7 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<p>See <a href="../TechDraw_FaceCenterLine.html#Notes" title="TechDraw FaceCenterLine">TechDraw FaceCenterLine</a>.
+<p>Voir <a href="../fr/TechDraw_FaceCenterLine.html#Remarques" title="TechDraw FaceCenterLine/fr">TechDraw Ligne centrale &agrave; une face</a>.
 </p><p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
@@ -128,34 +126,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114195318
+Cached time: 20260114195410
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.255 seconds
-Preprocessor visited node count: 371/1000000
-Post&#8208;expand include size: 26061/2097152 bytes
-Template argument size: 10203/2097152 bytes
+CPU time usage: 0.079 seconds
+Real time usage: 0.109 seconds
+Preprocessor visited node count: 370/1000000
+Post&#8208;expand include size: 26037/2097152 bytes
+Template argument size: 10179/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1704/5000000 bytes
+Unstrip post&#8208;expand size: 1708/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.494      1 -total
- 24.50%   12.859      1 Template:TechDraw_Tools_navi/fr
- 17.62%    9.248      2 Template:Button
- 16.91%    8.874      1 Template:Userdocnavi/fr
- 15.42%    8.095      2 Template:Navigation_menu_2
- 14.49%    7.605      1 Template:GuiCommand/fr
- 10.13%    5.319      2 Template:Docnav/fr
-  7.41%    3.892      1 Template:Caption
-  6.46%    3.393      1 Template:MenuCommand
+100.00%   22.739      1 -total
+ 33.64%    7.650      1 Template:TechDraw_Tools_navi/fr
+ 23.28%    5.293      2 Template:Navigation_menu_2
+ 15.26%    3.470      1 Template:GuiCommand/fr
+ 13.87%    3.153      1 Template:Userdocnavi/fr
+ 12.32%    2.802      2 Template:Docnav/fr
+  9.13%    2.076      1 Template:Caption
+  6.80%    1.547      2 Template:Button
+  5.85%    1.330      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156639-0!canonical and timestamp 20260114195317 and revision id 1738501. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156639-0!canonical and timestamp 20260114195410 and revision id 1738505. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
