--- a/wiki/fr/TechDraw_FaceCenterLine.html
+++ b/wiki/fr/TechDraw_FaceCenterLine.html
@@ -114,14 +114,12 @@
 <p>Les lignes centrales n'ont pas de propri&eacute;t&eacute;s propres car elles ne sont pas des objets du document.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Quadrants.html" title="TechDraw Quadrants/fr">Sommets quadrants</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/fr">Ligne de rep&egrave;re</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/fr">Ligne centrale entre 2 ar&ecirc;tes</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -161,15 +159,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114195503
+Cached time: 20260114195513
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.135 seconds
-Preprocessor visited node count: 479/1000000
-Post&#8208;expand include size: 27349/2097152 bytes
-Template argument size: 10440/2097152 bytes
+CPU time usage: 0.104 seconds
+Real time usage: 0.269 seconds
+Preprocessor visited node count: 478/1000000
+Post&#8208;expand include size: 27352/2097152 bytes
+Template argument size: 10442/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -177,19 +175,19 @@ Unstrip post&#8208;expand size: 1661/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.797      1 -total
- 30.31%    8.426      1 Template:TechDraw_Tools_navi/fr
- 19.70%    5.476      2 Template:Navigation_menu_2
- 14.57%    4.051      1 Template:GuiCommand/fr
- 11.70%    3.253      1 Template:Userdocnavi/fr
- 10.46%    2.907      2 Template:Docnav/fr
-  8.79%    2.444      2 Template:PropertyView
-  6.93%    1.926      1 Template:Caption
-  4.90%    1.362      2 Template:Variable
-  4.23%    1.176      3 Template:Button
+100.00%   80.536      1 -total
+ 38.75%   31.205      1 Template:TechDraw_Tools_navi/fr
+ 23.34%   18.794      2 Template:Navigation_menu_2
+ 13.84%   11.146      1 Template:Userdocnavi/fr
+ 12.69%   10.223      2 Template:PropertyView
+  7.68%    6.183      1 Template:GuiCommand/fr
+  6.94%    5.589      2 Template:Docnav/fr
+  5.65%    4.551      2 Template:Variable
+  5.26%    4.236      1 Template:Caption
+  4.00%    3.224      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260114195503 and revision id 1738507. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260114195513 and revision id 1738509. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
