Updated page TechDraw FaceCenterLine/fr

--- a/wiki/fr/TechDraw_FaceCenterLine.html
+++ b/wiki/fr/TechDraw_FaceCenterLine.html
@@ -81,24 +81,17 @@
 <li>Un panneau de t&acirc;ches s'ouvre. Voir <a href="#Options">Options</a> pour plus d'informations.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> pour confirmer.</li></ol>
 <h2><span class="mw-headline" id="Options">Options</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Orientation</b>&nbsp;:
 <ul><li><b>Vertical</b>&nbsp;: force la ligne centrale &agrave; &ecirc;tre verticale. Ignor&eacute; pour Ligne centrale entre 2 points.</li>
 <li><b>Horizontal</b>&nbsp;: force la ligne centrale &agrave; &ecirc;tre horizontale. Ignor&eacute; pour Ligne centrale entre 2 points.</li>
 <li><b>Align&eacute;</b>&nbsp;: non disponible pour Ligne centrale &agrave; une face. Force la ligne centrale &agrave; suivre la direction g&eacute;n&eacute;rale des ar&ecirc;tes s&eacute;lectionn&eacute;es pour Ligne centrale entre 2 lignes. Ignor&eacute; pour Ligne centrale entre 2 points.</li></ul></li>
-<li><b>D&eacute;calage horizontal</b>&nbsp;: d&eacute;place la ligne centrale &agrave; gauche ou &agrave; droite de sa position normale.</li>
+<li><b>Style</b>&nbsp;: style de ligne de la ligne centrale.</li>
+<li><b>Couleur</b>&nbsp;: la couleur de la ligne centrale.</li>
+<li><b>&Eacute;paisseur</b>&nbsp;: la largeur de la ligne centrale.</li>
+<li><b>D&eacute;calage horizontal</b>&nbsp;: d&eacute;place la ligne centrale vers la gauche ou vers la droite par rapport &agrave; sa position normale.</li>
 <li><b>D&eacute;calage vertical</b>&nbsp;: d&eacute;place la ligne centrale vers le haut ou vers le bas par rapport &agrave; sa position normale.</li>
-<li><b>Pivoter</b>&nbsp;: fait pivoter la ligne centrale autour de son point central (en degr&eacute;s. + dans le sens inverse des aiguilles d'une montre, - dans le sens des aiguilles d'une montre).</li>
-<li><b>&Eacute;tendre de</b>&nbsp;: allonge la ligne centrale de cette valeur.</li>
-<li><b>Couleur</b>&nbsp;: couleur de la ligne centrale.</li>
-<li><b>&Eacute;paisseur</b>&nbsp;: largeur de la ligne centrale.</li>
-<li><b>Style</b>&nbsp;: style de la ligne centrale. Les options sont&nbsp;:
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Continuous-line.svg&amp;filetimestamp=20240522200907&amp;.html" class="mw-file-description"><img src="../File/Continuous-line.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Continu</b></li>
-<li><span typeof="mw:File"><a href="../index.php?title=Dash-line.svg&amp;filetimestamp=20240522200957&amp;.html" class="mw-file-description"><img src="../File/Dash-line.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Tiret</b></li>
-<li><span typeof="mw:File"><a href="../index.php?title=Dot-line.svg&amp;filetimestamp=20240522201015&amp;.html" class="mw-file-description"><img src="../File/Dot-line.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Point</b></li>
-<li><span typeof="mw:File"><a href="../index.php?title=DashDot-line.svg&amp;filetimestamp=20240522200946&amp;.html" class="mw-file-description"><img src="../File/DashDot-line.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Tiret Point</b></li>
-<li><span typeof="mw:File"><a href="../index.php?title=DashDotDot-line.svg&amp;filetimestamp=20240522200924&amp;.html" class="mw-file-description"><img src="../File/DashDotDot-line.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Tiret Point Point</b></li></ul></li></ul>
-</div>
+<li><b>Rotation</b>&nbsp;: fait pivoter la ligne centrale autour de son point m&eacute;dian (degr&eacute;s. + dans le sens antihoraire, - dans le sens horaire).</li>
+<li><b>&Eacute;tendre de</b>&nbsp;: &eacute;tend la ligne centrale de cette valeur.</li></ul>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -159,13 +152,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114195513
+Cached time: 20260114201511
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.269 seconds
-Preprocessor visited node count: 478/1000000
+CPU time usage: 0.083 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 472/1000000
 Post&#8208;expand include size: 27352/2097152 bytes
 Template argument size: 10442/2097152 bytes
 Highest expansion depth: 7/100
@@ -175,19 +168,19 @@ Unstrip post&#8208;expand size: 1661/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   80.536      1 -total
- 38.75%   31.205      1 Template:TechDraw_Tools_navi/fr
- 23.34%   18.794      2 Template:Navigation_menu_2
- 13.84%   11.146      1 Template:Userdocnavi/fr
- 12.69%   10.223      2 Template:PropertyView
-  7.68%    6.183      1 Template:GuiCommand/fr
-  6.94%    5.589      2 Template:Docnav/fr
-  5.65%    4.551      2 Template:Variable
-  5.26%    4.236      1 Template:Caption
-  4.00%    3.224      3 Template:Button
+100.00%   30.782      1 -total
+ 23.81%    7.329      1 Template:TechDraw_Tools_navi/fr
+ 16.04%    4.938      2 Template:Navigation_menu_2
+ 12.39%    3.815      1 Template:Userdocnavi/fr
+ 11.68%    3.596      2 Template:PropertyView
+ 11.00%    3.386      1 Template:Version/fr
+ 10.31%    3.173      2 Template:Docnav/fr
+  8.79%    2.707      1 Template:GuiCommand/fr
+  6.14%    1.890      2 Template:Variable
+  5.50%    1.692      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260114195513 and revision id 1738509. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260114201511 and revision id 1738511. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
