--- a/wiki/fr/TechDraw_FaceCenterLine.html
+++ b/wiki/fr/TechDraw_FaceCenterLine.html
@@ -95,12 +95,10 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li>Pour supprimer une ligne centrale, s&eacute;lectionnez-la et appuyez sur <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Supprimer</span>. <span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span></li>
 <li>Une ligne centrale &agrave; une face remplacera &eacute;ventuellement deux propri&eacute;t&eacute;s d'affichage&nbsp;:
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Vue</span><b>HorizCenterLine</b>&nbsp;: affiche un trait d'axe horizontal dans la vue.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Vue</span><b>VertCenterLine</b>&nbsp;: affiche un trait d'axe vertical dans la vue.</li></ul></li></ul>
-</div>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Vue</span><b>Horiz Center Line</b>&nbsp;: affiche un trait d'axe horizontal dans la vue.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Vue</span><b>Vert Center Line</b>&nbsp;: affiche un trait d'axe vertical dans la vue.</li></ul></li></ul>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
@@ -152,15 +150,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114201511
+Cached time: 20260114202000
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.116 seconds
-Preprocessor visited node count: 472/1000000
-Post&#8208;expand include size: 27352/2097152 bytes
-Template argument size: 10442/2097152 bytes
+CPU time usage: 0.108 seconds
+Real time usage: 0.157 seconds
+Preprocessor visited node count: 471/1000000
+Post&#8208;expand include size: 27360/2097152 bytes
+Template argument size: 10450/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -168,19 +166,19 @@ Unstrip post&#8208;expand size: 1661/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.782      1 -total
- 23.81%    7.329      1 Template:TechDraw_Tools_navi/fr
- 16.04%    4.938      2 Template:Navigation_menu_2
- 12.39%    3.815      1 Template:Userdocnavi/fr
- 11.68%    3.596      2 Template:PropertyView
- 11.00%    3.386      1 Template:Version/fr
- 10.31%    3.173      2 Template:Docnav/fr
-  8.79%    2.707      1 Template:GuiCommand/fr
-  6.14%    1.890      2 Template:Variable
-  5.50%    1.692      1 Template:KEY
+100.00%   33.438      1 -total
+ 23.17%    7.746      1 Template:TechDraw_Tools_navi/fr
+ 17.88%    5.980      2 Template:Navigation_menu_2
+ 13.83%    4.626      1 Template:Userdocnavi/fr
+ 12.44%    4.160      2 Template:PropertyView
+ 10.91%    3.648      1 Template:GuiCommand/fr
+ 10.36%    3.464      2 Template:Docnav/fr
+  6.51%    2.177      2 Template:Variable
+  6.31%    2.110      1 Template:Caption
+  6.30%    2.106      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260114201511 and revision id 1738511. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260114202000 and revision id 1738513. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
