--- a/wiki/it/Cables_Create_Custom_Connector.html
+++ b/wiki/it/Cables_Create_Custom_Connector.html
@@ -4,7 +4,6 @@
 <li><a href="../fr/Cables_Create_Custom_Connector.html" class="mw-pt-progress mw-pt-progress--complete" title="Tutoriel Cables Cr&eacute;er un connecteur personnalis&eacute; (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Cables_Create_Custom_Connector.html" class="mw-pt-progress mw-pt-progress--low" title="Kable: Tw&oacute;rz niestandardowe z&#322;&#261;cza (3% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" style="width: 230px; float: right; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;"><span typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span> Tutorial
@@ -13,31 +12,31 @@
 <th class="ctOdd">Topic
 </th></tr>
 <tr>
-<td class="ctEven">Cables Create Custom Connector
+<td class="ctEven">{{{Topic}}}
 </td></tr>
 <tr>
 <th class="ctOdd">Level
 </th></tr>
 <tr>
-<td class="ctEven">Intermediate
+<td class="ctEven">{{{Level}}}
 </td></tr>
 <tr>
 <th class="ctOdd">Time to complete
 </th></tr>
 <tr>
-<td class="ctEven">N/A
+<td class="ctEven"><i>Not provided</i>
 </td></tr>
 <tr>
 <th class="ctOdd">Authors
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../User;SargoDevel.html" title="User:SargoDevel">SargoDevel</a>
+<td class="ctEven"><i>Not provided</i>
 </td></tr>
 <tr>
 <th class="ctOdd">FreeCAD version
 </th></tr>
 <tr>
-<td class="ctEven">1.0 or above
+<td class="ctEven">1.0 o superiore
 </td></tr>
 <tr>
 <th class="ctOdd">Example files
@@ -49,12 +48,11 @@
 <th class="ctOdd">See also
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../Cables_Workbench.html" title="Cables Workbench">Cables Workbench</a>
+<td class="ctEven"><i>None</i>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Introduction"></span>
 </p>
 <h2><span class="mw-headline" id="Introduzione">Introduzione</span></h2>
@@ -405,15 +403,15 @@ Pin002,Terminal,Terminal,0.0,-1.5,12.0,0.0,0.0,90.0,1,6.0,1.0
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260108220004
+Cached time: 20260114230529
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.178 seconds
-Preprocessor visited node count: 708/1000000
-Post&#8208;expand include size: 13266/2097152 bytes
-Template argument size: 4555/2097152 bytes
+CPU time usage: 0.085 seconds
+Real time usage: 0.288 seconds
+Preprocessor visited node count: 702/1000000
+Post&#8208;expand include size: 13219/2097152 bytes
+Template argument size: 4446/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 16/100
 Unstrip recursion depth: 0/20
@@ -421,19 +419,19 @@ Unstrip post&#8208;expand size: 5463/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.638      1 -total
- 27.02%    8.818      1 Template:Userdocnavi/it
- 21.27%    6.941     16 Template:Code
- 13.36%    4.359      1 Template:TutorialInfo
- 12.82%    4.184      1 Template:Navigation_menu_2
- 11.03%    3.602      9 Template:Incode
-  6.43%    2.098     18 Template:FileName
-  4.94%    1.612      3 Template:Caption
-  4.44%    1.450      1 Template:Button
-  1.90%    0.619     10 =
+100.00%  203.444      1 -total
+ 82.39%  167.623     16 Template:Code
+  9.39%   19.102      1 Template:Userdocnavi/it
+  1.93%    3.931      1 Template:Navigation_menu_2
+  1.83%    3.727      9 Template:Incode
+  1.38%    2.814      3 Template:Caption
+  1.36%    2.769      1 Template:Button
+  1.16%    2.364     18 Template:FileName
+  0.85%    1.721      1 Template:TutorialInfo
+  0.27%    0.558     10 =
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409856-0!canonical and timestamp 20260108220004 and revision id 1730202. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409856-0!canonical and timestamp 20260114230528 and revision id 1738515. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
