--- a/wiki/it/Cables_Create_Custom_Connector.html
+++ b/wiki/it/Cables_Create_Custom_Connector.html
@@ -12,25 +12,25 @@
 <th class="ctOdd">Topic
 </th></tr>
 <tr>
-<td class="ctEven">{{{Topic}}}
+<td class="ctEven">Cavi: crea connettore personalizzato
 </td></tr>
 <tr>
 <th class="ctOdd">Level
 </th></tr>
 <tr>
-<td class="ctEven">{{{Level}}}
+<td class="ctEven">Intermedio
 </td></tr>
 <tr>
 <th class="ctOdd">Time to complete
 </th></tr>
 <tr>
-<td class="ctEven"><i>Not provided</i>
+<td class="ctEven">N/A
 </td></tr>
 <tr>
 <th class="ctOdd">Authors
 </th></tr>
 <tr>
-<td class="ctEven"><i>Not provided</i>
+<td class="ctEven"><a href="../User;SargoDevel.html" title="User:SargoDevel">SargoDevel</a>
 </td></tr>
 <tr>
 <th class="ctOdd">FreeCAD version
@@ -48,7 +48,7 @@
 <th class="ctOdd">See also
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><a href="../Cables_Workbench.html" title="Cables Workbench">Cables Workbench</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
@@ -403,15 +403,15 @@ Pin002,Terminal,Terminal,0.0,-1.5,12.0,0.0,0.0,90.0,1,6.0,1.0
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114230529
+Cached time: 20260114230815
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.288 seconds
-Preprocessor visited node count: 702/1000000
-Post&#8208;expand include size: 13219/2097152 bytes
-Template argument size: 4446/2097152 bytes
+CPU time usage: 0.088 seconds
+Real time usage: 0.111 seconds
+Preprocessor visited node count: 707/1000000
+Post&#8208;expand include size: 13273/2097152 bytes
+Template argument size: 4562/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 16/100
 Unstrip recursion depth: 0/20
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 5463/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  203.444      1 -total
- 82.39%  167.623     16 Template:Code
-  9.39%   19.102      1 Template:Userdocnavi/it
-  1.93%    3.931      1 Template:Navigation_menu_2
-  1.83%    3.727      9 Template:Incode
-  1.38%    2.814      3 Template:Caption
-  1.36%    2.769      1 Template:Button
-  1.16%    2.364     18 Template:FileName
-  0.85%    1.721      1 Template:TutorialInfo
-  0.27%    0.558     10 =
+100.00%   30.397      1 -total
+ 24.08%    7.319      1 Template:Userdocnavi/it
+ 21.80%    6.628     16 Template:Code
+ 11.98%    3.641      1 Template:TutorialInfo
+ 11.78%    3.581      1 Template:Navigation_menu_2
+ 10.03%    3.049      9 Template:Incode
+  7.13%    2.169     18 Template:FileName
+  6.57%    1.997      3 Template:Caption
+  5.49%    1.670      1 Template:Button
+  1.80%    0.548     10 =
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409856-0!canonical and timestamp 20260114230528 and revision id 1738515. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409856-0!canonical and timestamp 20260114230815 and revision id 1738517. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
