--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -9,7 +9,7 @@
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
 <p><span typeof="mw:File"><a href="../index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="../File/WF_wf.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span> </span>
-Arbeits-Funktionen
+Macro WorkFeatures
 </p>
 </td></tr>
 <tr>
@@ -451,13 +451,13 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260114180522
+Cached time: 20260115043650
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.165 seconds
-Real time usage: 0.392 seconds
-Preprocessor visited node count: 674/1000000
+CPU time usage: 0.153 seconds
+Real time usage: 0.244 seconds
+Preprocessor visited node count: 675/1000000
 Post&#8208;expand include size: 25853/2097152 bytes
 Template argument size: 3266/2097152 bytes
 Highest expansion depth: 5/100
@@ -467,18 +467,18 @@ Unstrip post&#8208;expand size: 21307/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  258.558      1 -total
-  2.46%    6.362     54 Template:KEY
-  2.39%    6.191      1 Template:Caption
-  2.37%    6.135      1 Template:Macro/de
-  2.09%    5.408      1 Template:Userdocnavi/de
-  1.48%    3.829     11 Template:Clear
-  1.24%    3.208      1 Template:MenuCommand
-  0.94%    2.429      1 Template:Navigation_menu_2
-  0.76%    1.957      1 Template:Button
+100.00%  130.965      1 -total
+  6.66%    8.728      1 Template:Userdocnavi/de
+  3.49%    4.565      1 Template:Macro/de
+  3.23%    4.231     54 Template:KEY
+  3.20%    4.187      1 Template:Navigation_menu_2
+  2.10%    2.746      1 Template:Caption
+  2.02%    2.650     11 Template:Clear
+  1.71%    2.234      1 Template:Button
+  1.34%    1.751      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260114180522 and revision id 1738474. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115043649 and revision id 1738519. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
