--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -76,12 +76,12 @@ Macro WorkFeatures
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<p>Werkzeug-Hilfsprogramm zum Erstellen von:
+<p>Werkzeug-Dienstprogramm zum Erstellen von:
 </p>
 <ul><li>Punkten (Mittelpunkte, Kreismittelpunkte, Mittelpunkte von Objekten...),</li>
-<li>Achsen (aus 2 Punkten, Normalen von Ebenen...),</li>
-<li>Ebenen (aus 3 Punkten, aus einer Achse und einem Punkt...)</li>
-<li>Und viele andere n&uuml;tzliche Funktionen, die dir die Erstellung deines Projekts erleichtern. Dieses Hilfsprogramm befindet sich in der Combo-Ansicht mit der Bezeichnung <i>Work Features</i> (Deutsch: <i>ArbeitsFunktionen</i>).</li></ul>
+<li>Achsen (aus zwei Punkten, Normalen von Ebenen...),</li>
+<li>Ebenen (aus drei Punkten, aus einer Achse und einem Punkt...)</li>
+<li>Und viele andere n&uuml;tzliche Funktionen, die einem die Erstellung eines Projekts erleichtern. Dieses Dienstprogramm befindet sich in der Combo-Ansicht mit der Bezeichnung <i>Work Features</i> (Deutsch: ArbeitsFunktionen).</li></ul>
 <p><span typeof="mw:File"><a href="../index.php?title=WF.png&amp;filetimestamp=20141224155539&amp;.html" class="mw-file-description"><img src="../File/WF.png" decoding="async" width="640" height="370" class="mw-file-element" data-file-width="1301" data-file-height="753"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">WorkFeatures</p>
@@ -451,12 +451,12 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115043811
+Cached time: 20260115044204
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.140 seconds
+CPU time usage: 0.131 seconds
+Real time usage: 0.160 seconds
 Preprocessor visited node count: 674/1000000
 Post&#8208;expand include size: 25853/2097152 bytes
 Template argument size: 3266/2097152 bytes
@@ -467,18 +467,18 @@ Unstrip post&#8208;expand size: 21307/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.573      1 -total
-  3.93%    2.619      1 Template:Userdocnavi/de
-  3.47%    2.309     54 Template:KEY
-  2.77%    1.847      1 Template:Macro/de
-  2.26%    1.503     11 Template:Clear
-  1.91%    1.269      1 Template:Button
-  1.67%    1.113      1 Template:Navigation_menu_2
-  1.57%    1.048      1 Template:Caption
-  1.38%    0.919      1 Template:MenuCommand
+100.00%   70.409      1 -total
+  4.09%    2.877     54 Template:KEY
+  4.01%    2.825      1 Template:Userdocnavi/de
+  3.83%    2.698      1 Template:Macro/de
+  2.87%    2.019      1 Template:MenuCommand
+  2.77%    1.952      1 Template:Button
+  2.28%    1.604      1 Template:Caption
+  2.18%    1.537     11 Template:Clear
+  1.80%    1.264      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115043811 and revision id 1738521. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115044204 and revision id 1738523. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
