--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -9,14 +9,14 @@
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
 <p><span typeof="mw:File"><a href="../index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="../File/WF_wf.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span> </span>
-Macro WorkFeatures
+Makro ArbeitsFunktionen
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Beschreibung
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Werkzeug Hilfsprogramm zum Erstellen von Punkten, Achsen, Ebenen...und andere n&uuml;tzliche Funktionen.<br><br>Versionsmakro&nbsp;: 05/2019<br>Datum der letzten &Auml;nderung&nbsp;: 01.05.2019<br>FreeCAD version&nbsp;: Alle<br>Herunterladen&nbsp;: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/9/9d/WF_wf.png">Werkzeugleisten-Symbol</a><br>Autor: rentlau_64<br>
+<td class="ctEven left macro-description">Werkzeug Dienstprogramm zum Erstellen von Punkten, Achsen, Ebenen...und andere n&uuml;tzliche Funktionen.<br><br>Versionsmakro&nbsp;: 05/2019<br>Datum der letzten &Auml;nderung&nbsp;: 01.05.2019<br>FreeCAD version&nbsp;: Alle<br>Herunterladen&nbsp;: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/9/9d/WF_wf.png">Werkzeugleisten-Symbol</a><br>Autor: rentlau_64<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autor
@@ -451,15 +451,15 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115044240
+Cached time: 20260115044324
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.158 seconds
+CPU time usage: 0.117 seconds
+Real time usage: 0.139 seconds
 Preprocessor visited node count: 674/1000000
-Post&#8208;expand include size: 25853/2097152 bytes
-Template argument size: 3266/2097152 bytes
+Post&#8208;expand include size: 25864/2097152 bytes
+Template argument size: 3272/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -467,18 +467,18 @@ Unstrip post&#8208;expand size: 21307/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.092      1 -total
-  5.26%    3.845      1 Template:Userdocnavi/de
-  4.39%    3.206      1 Template:Macro/de
-  3.68%    2.689     11 Template:Clear
-  3.32%    2.430     54 Template:KEY
-  2.78%    2.031      1 Template:Caption
-  2.07%    1.512      1 Template:MenuCommand
-  1.17%    0.854      1 Template:Navigation_menu_2
-  1.15%    0.839      1 Template:Button
+100.00%   65.610      1 -total
+  4.75%    3.115      1 Template:Userdocnavi/de
+  3.73%    2.450     54 Template:KEY
+  3.26%    2.140      1 Template:Macro/de
+  2.54%    1.665     11 Template:Clear
+  1.68%    1.105      1 Template:Button
+  1.64%    1.078      1 Template:Caption
+  1.54%    1.013      1 Template:Navigation_menu_2
+  1.37%    0.898      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115044240 and revision id 1738523. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115044324 and revision id 1738526. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
