--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -93,16 +93,16 @@ Makro ArbeitsFunktionen
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 235px">
-			<div class="thumb" style="width: 230px; height: 430px;"><span typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_01.png&amp;filetimestamp=20150125191502&amp;.html" class="mw-file-description" title="Nach dem Aktivieren von Work Features bewegt sich das Werkzeug im Combo Ansichtsfensters nach links."><img alt="Nach dem Aktivieren von Work Features bewegt sich das Werkzeug im Combo Ansichtsfensters nach links." src="../File/Macro_WorkFeatures_01.png" decoding="async" width="200" height="352" class="mw-file-element" data-file-width="404" data-file-height="711"></a></span></div>
-			<div class="gallerytext">Nach dem Aktivieren von Work Features bewegt sich das Werkzeug im Combo Ansichtsfensters nach links.</div>
+			<div class="thumb" style="width: 230px; height: 430px;"><span typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_01.png&amp;filetimestamp=20150125191502&amp;.html" class="mw-file-description" title="Nach dem Aktivieren der ArbeitsFunktionen bewegt sich das Werkzeug in der Combo-Ansicht des Fensters nach links."><img alt="Nach dem Aktivieren der ArbeitsFunktionen bewegt sich das Werkzeug in der Combo-Ansicht des Fensters nach links." src="../File/Macro_WorkFeatures_01.png" decoding="async" width="200" height="352" class="mw-file-element" data-file-width="404" data-file-height="711"></a></span></div>
+			<div class="gallerytext">Nach dem Aktivieren der ArbeitsFunktionen bewegt sich das Werkzeug in der Combo-Ansicht des Fensters nach links.</div>
 		</li>
 		<li class="gallerybox" style="width: 235px">
 			<div class="thumb" style="width: 230px; height: 430px;"><span typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_07.png&amp;filetimestamp=20141224211522&amp;.html" class="mw-file-description" title="Jede Verwendung und jedes Tag, das einer Funktionsgruppe entspricht, ist eine Gruppe, die im Namen des verwendeten Kennzeichens erstellt wurde. Der Ursprung von Achse, Punkt und Ebene wird direkt auf ausgeblendet gesetzt."><img alt="Jede Verwendung und jedes Tag, das einer Funktionsgruppe entspricht, ist eine Gruppe, die im Namen des verwendeten Kennzeichens erstellt wurde. Der Ursprung von Achse, Punkt und Ebene wird direkt auf ausgeblendet gesetzt." src="../File/Macro_WorkFeatures_07.png" decoding="async" width="200" height="396" class="mw-file-element" data-file-width="293" data-file-height="580"></a></span></div>
 			<div class="gallerytext">Jede Verwendung und jedes Tag, das einer Funktionsgruppe entspricht, ist eine Gruppe, die im Namen des verwendeten Kennzeichens erstellt wurde. Der Ursprung von Achse, Punkt und Ebene wird direkt auf ausgeblendet gesetzt.</div>
 		</li>
 		<li class="gallerybox" style="width: 235px">
-			<div class="thumb" style="width: 230px; height: 430px;"><span typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_08.png&amp;filetimestamp=20141224211549&amp;.html" class="mw-file-description" title='Du kannst allgemeine Befehle EINGEBEN UND VERWENDEN, um die erstellte Funktion sichtbar zu machen. Beispieltaste Space oder w&auml;hle dein Objekt aus und rechtsklicke mit der Maus und klicke auf "Auswahl ausblenden" oder "Auswahl anzeigen" .'><img alt='Du kannst allgemeine Befehle EINGEBEN UND VERWENDEN, um die erstellte Funktion sichtbar zu machen. Beispieltaste Space oder w&auml;hle dein Objekt aus und rechtsklicke mit der Maus und klicke auf "Auswahl ausblenden" oder "Auswahl anzeigen" .' src="../File/Macro_WorkFeatures_08.png" decoding="async" width="200" height="396" class="mw-file-element" data-file-width="293" data-file-height="580"></a></span></div>
-			<div class="gallerytext">Du kannst allgemeine Befehle EINGEBEN UND VERWENDEN, um die erstellte Funktion sichtbar zu machen.<br>Beispieltaste <b><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Space</span></b> oder w&auml;hle dein Objekt aus und rechtsklicke mit der Maus und klicke auf "<b>Auswahl ausblenden</b>"  oder "<b>Auswahl anzeigen</b>" .</div>
+			<div class="thumb" style="width: 230px; height: 430px;"><span typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_08.png&amp;filetimestamp=20141224211549&amp;.html" class="mw-file-description" title="Es k&ouml;nnen allgemeine Befehle EINGEBEN UND VERWENDET werden, um die erstellte Funktion sichtbar zu machen. Beispieltaste Leertaste oder ein Objekt ausw&auml;hlen und Rechtsklick mit der Maus und auf &bdquo;Auswahl ausblenden&ldquo; oder &bdquo;Auswahl anzeigen&ldquo; klicken."><img alt="Es k&ouml;nnen allgemeine Befehle EINGEBEN UND VERWENDET werden, um die erstellte Funktion sichtbar zu machen. Beispieltaste Leertaste oder ein Objekt ausw&auml;hlen und Rechtsklick mit der Maus und auf &bdquo;Auswahl ausblenden&ldquo; oder &bdquo;Auswahl anzeigen&ldquo; klicken." src="../File/Macro_WorkFeatures_08.png" decoding="async" width="200" height="396" class="mw-file-element" data-file-width="293" data-file-height="580"></a></span></div>
+			<div class="gallerytext">Es k&ouml;nnen allgemeine Befehle EINGEBEN UND VERWENDET werden, um die erstellte Funktion sichtbar zu machen.<br>Beispieltaste <b><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Leertaste</span></b> oder ein Objekt ausw&auml;hlen und Rechtsklick mit der Maus und auf &bdquo;<b>Auswahl ausblenden</b>&ldquo;  oder &bdquo;<b>Auswahl anzeigen</b>&ldquo; klicken.</div>
 		</li>
 </ul>
 </center>
@@ -451,34 +451,34 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115044324
+Cached time: 20260115044830
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.117 seconds
-Real time usage: 0.139 seconds
+CPU time usage: 0.160 seconds
+Real time usage: 0.193 seconds
 Preprocessor visited node count: 674/1000000
-Post&#8208;expand include size: 25864/2097152 bytes
-Template argument size: 3272/2097152 bytes
+Post&#8208;expand include size: 25868/2097152 bytes
+Template argument size: 3276/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21307/5000000 bytes
+Unstrip post&#8208;expand size: 21357/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.610      1 -total
-  4.75%    3.115      1 Template:Userdocnavi/de
-  3.73%    2.450     54 Template:KEY
-  3.26%    2.140      1 Template:Macro/de
-  2.54%    1.665     11 Template:Clear
-  1.68%    1.105      1 Template:Button
-  1.64%    1.078      1 Template:Caption
-  1.54%    1.013      1 Template:Navigation_menu_2
-  1.37%    0.898      1 Template:MenuCommand
+100.00%  101.478      1 -total
+  5.38%    5.456      1 Template:Macro/de
+  3.47%    3.525     54 Template:KEY
+  3.17%    3.215      1 Template:Userdocnavi/de
+  2.54%    2.582      1 Template:Caption
+  2.18%    2.208     11 Template:Clear
+  1.59%    1.618      1 Template:Button
+  1.54%    1.565      1 Template:MenuCommand
+  1.24%    1.254      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115044324 and revision id 1738526. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115044830 and revision id 1738528. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
