Updated page Macro WorkFeatures/de

--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -145,16 +145,16 @@ Makro ArbeitsFunktionen
 <td><figure class="mw-halign-left" typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_04.png&amp;filetimestamp=20141225151924&amp;.html" class="mw-file-description"><img src="../File/Macro_WorkFeatures_04.png" decoding="async" width="200" height="336" class="mw-file-element" data-file-width="350" data-file-height="588"></a><figcaption></figcaption></figure>
 </td>
 <td>
-<ul><li><b>Reiter Axis</b></li>
+<ul><li><b>Reiter Axis</b> (Achsen)</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) X, Y, Z Axes</span>&nbsp;: Drei Achsen an der Mitte aller ausgew&auml;hlten Objekte erstellen.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Two Points Axis</span>&nbsp;: Eine Achse, die zwei Punkte kreuzt erstellen.</li>
-<li><b>SpinBox</b>&nbsp;: Den Verdr&auml;ngungswert eingeben</li>
+<li><b>Drehfeld</b>&nbsp;: Den Verdr&auml;ngungswert eingeben</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cylinder(s) Axis</span>&nbsp;: Die Achse eines Zylinders erstellen.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Line,Line)</span>&nbsp;: Die Achse zwischen zwei Achsen erstellen.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Plane(s) Axes</span>&nbsp;: Zwei senkrechte Achsen an der Mitte einer Ebene erstellen.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Point,Axis)</span>&nbsp;: Eine Achse parallel zu einer Achse erstellen, die einen Punkt schneidet.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Axis,Point)</span>&nbsp;: Eine Achse erstellen, die senkrecht zu einer Achse steht und einen Punkt schneidet.</li>
-<li><b>SpinBox</b>&nbsp;: Den Verdr&auml;ngungswert eingeben</li>
+<li><b>Drehfeld</b>&nbsp;: Den Verdr&auml;ngungswert eingeben</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Plane,Axis)</span>&nbsp;: Eine Achse auf einer Ebene durch Projektion von einer anderen Achse erstellen.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Axis (Plane,Plane)</span>&nbsp;: Eine Achse durch den Schnittpunkt zweier Ebenen erstellen.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Base Axis</span>&nbsp;: Drei Achsen an der Basisposition aller ausgew&auml;hlten Objekte erstellen.</li></ul>
@@ -451,12 +451,12 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115051009
+Cached time: 20260115051104
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.162 seconds
+CPU time usage: 0.151 seconds
+Real time usage: 0.205 seconds
 Preprocessor visited node count: 674/1000000
 Post&#8208;expand include size: 25864/2097152 bytes
 Template argument size: 3272/2097152 bytes
@@ -467,18 +467,18 @@ Unstrip post&#8208;expand size: 21357/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.074      1 -total
-  4.44%    2.980      1 Template:Macro/de
-  4.02%    2.698     54 Template:KEY
-  3.85%    2.582      1 Template:Userdocnavi/de
-  2.44%    1.639     11 Template:Clear
-  2.27%    1.520      1 Template:Button
-  2.13%    1.431      1 Template:Caption
-  1.62%    1.084      1 Template:Navigation_menu_2
-  1.43%    0.958      1 Template:MenuCommand
+100.00%  104.432      1 -total
+  5.22%    5.452      1 Template:Userdocnavi/de
+  3.52%    3.675      1 Template:Macro/de
+  2.98%    3.109     54 Template:KEY
+  2.36%    2.468      1 Template:Navigation_menu_2
+  2.00%    2.089      1 Template:Button
+  1.66%    1.729      1 Template:Caption
+  1.58%    1.647     11 Template:Clear
+  1.18%    1.229      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115051009 and revision id 1738533. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115051104 and revision id 1738535. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
