Created page with "'''Reiter Objects''' (Objekte) {| |[[File:Macro WorkFeatures 06.png|200px|left]] | *'''Reiter Objects''' (Objekte) * {{KEY|Bounding Box(es)}} : Erstellt Begrenzungsrahmen um jedes ausgewählte Objekt. * {{KEY|Bounding Box}} : Erstellt einen Begrenzungsrahmen um alle ausgewählten Objekte. * {{KEY|Cylinder}} : Zunächst eine Achse und einen Punkt auswählen. Bei Bedarf Durchmesser und Länge festlegen. Dann auf die Schaltfläche ... klicken. Es wird ein Zylinder erstellt,..."

--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -176,21 +176,19 @@ Makro ArbeitsFunktionen
 <li><b>Drehfeld</b>&nbsp;: Den Abstandswert eingeben.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Center Planes</span>&nbsp;: Erstellt drei Ebenen (XY, XZ und YZ) an der Mitte aller ausgew&auml;hlten Objekte.</li></ul>
 </td></tr></tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Objects Tab</b>
+<p><b>Reiter Objects</b> (Objekte)
 </p>
 <table>
 <tbody><tr>
 <td><figure class="mw-halign-left" typeof="mw:File"><a href="../index.php?title=Macro_WorkFeatures_06.png&amp;filetimestamp=20150125182724&amp;.html" class="mw-file-description"><img src="../File/Macro_WorkFeatures_06.png" decoding="async" width="200" height="352" class="mw-file-element" data-file-width="400" data-file-height="704"></a><figcaption></figcaption></figure>
 </td>
 <td>
-<ul><li><b>Objects Tab</b></li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Bounding Box(es)</span>&nbsp;: Create bounding boxes around each of selected object(s).</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Bounding Box</span>&nbsp;: Create one bounding box around all of selected object(s).</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cylinder</span>&nbsp;: First select an Axis and a Point. Define Diameter and Length if needed. Then Click the button... It will create a Cylinder aligned on the selected axis. with one of the extremities at point selected.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cube</span>&nbsp;: First select an Axis and a Point. Define Dimensions if needed. Then Click the button...  It will create a Cube aligned on the selected axis. with one of the extremities at point selected.</li></ul>
+<ul><li><b>Reiter Objects</b> (Objekte)</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Bounding Box(es)</span>&nbsp;: Erstellt Begrenzungsrahmen um jedes ausgew&auml;hlte Objekt.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Bounding Box</span>&nbsp;: Erstellt einen Begrenzungsrahmen um alle ausgew&auml;hlten Objekte.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cylinder</span>&nbsp;: Zun&auml;chst eine Achse und einen Punkt ausw&auml;hlen. Bei Bedarf Durchmesser und L&auml;nge festlegen. Dann auf die Schaltfl&auml;che ... klicken. Es wird ein Zylinder erstellt, der an der ausgew&auml;hlten Achse ausgerichtet ist. Eines der Enden befindet sich am ausgew&auml;hlten Punkt.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cube</span>&nbsp;: Zun&auml;chst eine Achse und einen Punkt ausw&auml;hlen. Bei Bedarf die Abmessungen festlegen. Dann auf die Schaltfl&auml;che ... klicken. Dadurch wird ein Quader erstellt, der an der ausgew&auml;hlten Achse ausgerichtet ist. Eine der Ecken befindet sich an dem ausgew&auml;hlten Punkt.</li></ul>
 </td></tr></tbody></table>
-</div>
 <p><b>Reiter Views</b> (Ansichten)
 </p>
 <table>
@@ -449,13 +447,13 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115051433
+Cached time: 20260115051656
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.145 seconds
-Real time usage: 0.203 seconds
-Preprocessor visited node count: 673/1000000
+CPU time usage: 0.143 seconds
+Real time usage: 0.185 seconds
+Preprocessor visited node count: 672/1000000
 Post&#8208;expand include size: 25864/2097152 bytes
 Template argument size: 3272/2097152 bytes
 Highest expansion depth: 5/100
@@ -465,18 +463,18 @@ Unstrip post&#8208;expand size: 21357/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  105.940      1 -total
-  3.43%    3.636      1 Template:Userdocnavi/de
-  2.72%    2.882      1 Template:Macro/de
-  2.64%    2.802     54 Template:KEY
-  2.28%    2.413      1 Template:Caption
-  1.65%    1.745     11 Template:Clear
-  1.46%    1.545      1 Template:Navigation_menu_2
-  1.36%    1.443      1 Template:Button
-  1.01%    1.071      1 Template:MenuCommand
+100.00%   88.373      1 -total
+  5.29%    4.674      1 Template:Macro/de
+  4.54%    4.014      1 Template:Userdocnavi/de
+  3.53%    3.121     54 Template:KEY
+  2.64%    2.330     11 Template:Clear
+  1.55%    1.372      1 Template:Navigation_menu_2
+  1.54%    1.362      1 Template:Caption
+  1.50%    1.327      1 Template:Button
+  1.48%    1.308      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115051432 and revision id 1738543. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115051656 and revision id 1738545. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
